fixed some spacing + removed container

--- a/valkyrie/src/app/login/login.component.css
+++ b/valkyrie/src/app/login/login.component.css
@@ -1,14 +1,9 @@
-.headerbox {
-	position: absolute;
-	width: 100%;
-	height: 250px;
-}
 
 .logodiv {
 	margin: 0 auto;
-	margin-top: 10%;
-	height: 150px;
+	margin-top: -8%;
 	width: 100%;
+	height: 20vh;
 	background-image: url('https://i.imgur.com/VbLFyhC.png');
 	background-repeat: no-repeat;
     background-position: center;
@@ -16,41 +11,44 @@
 }
 
 #valkyrie {
+	position: absolute;
+	width: 100%;
 	text-align: center;
 	letter-spacing: 8px;
 	font-family: 'PT Mono', monospace;
 	color: white;
+	margin-top: 25%;
 	font-size: 300%;
-	margin-top: 35%;
 }
 
 
 /*FORM STYLING*/ /*FORM STYLING*/ /*FORM STYLING*/
 .formdiv {
 	height: 300px;
-	margin-top: 65%;
+	margin-top: 30%;
 }
 
 #email {
 	font-size: 140%;
-	margin-top: 12%;
+	margin-top: 47%;
 	margin-left: 15%;
 	position: absolute;
 	width: 70%;
-	height: 20%;
+	height: 7%;
 	border: 2px solid black;
 
 }
 
 #password{
 	font-size: 140%;
-	margin-top: 30%;
+	margin-top: 64%;
 	margin-left: 15%;
 	position: absolute;
 	width: 70%;
-	height: 20%;
+	height: 7%;
 	border: 2px solid black;
 }
+
 
 #submit {
 	letter-spacing: 4px;
@@ -58,8 +56,8 @@
 	font-weight: bold;
 	font-size: 150%;
 	margin-left: 25%;
-	margin-top: 50%;
-	height: 20%;
+	margin-top: 85%;
+	height: 7%;
 	position: absolute;
 	width: 50%;
 	border: 2px solid black;
@@ -77,39 +75,8 @@
 	text-align: center;
 	position: absolute;
 	font-size: 170%;
-	margin-top: 96%;
+	margin-top: 125%;
 }
 
 
-/*THIS IS THE BORDER AROUND THE PAGE*/
-#top, #bottom, #left, #right {
-	background: #25766E;
-	position: fixed;
-}
-
-#left, #right {
-		top: 0; bottom: 0;
-		width: 7px;
-}
-
-#left { 
-	left: 0; 
-}
-		
-#right { 
-	right: 0; 
-}
-		
-#top, #bottom {
-	left: 0; right: 0;
-	height: 7px;
-}
-
-#top { 
-	top: 0; 
-}
-
-#bottom { 
-	bottom: 0; 
-}
 
